[project]
name = "houbpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "bpy",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[tool.uv.sources]
bpy = { url = "https://download.blender.org/pypi/bpy/bpy-3.6.0-cp310-cp310-win_amd64.whl" }
